# update-kube-config

./: .cursorrules  .envrc  .oco-env  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/kubeconfig_updater/: main.py  schema.py
