[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kubeconfig-updater"
version = "0.1.0"
description = "A tool to update Kubernetes credentials in kubeconfig"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.9.4",
]

[project.scripts]
update-kube-config = "kubeconfig_updater.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/kubeconfig_updater"]
